Change password and main courier and storekeeper activities design + small fixes

--- a/ParcelDelivery/app/src/main/res/layout/activity_change_password.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_change_password.xml
@@ -8,66 +8,70 @@
 
     <EditText
         android:id="@+id/ID_NEW_PASSWORD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/editTextField"
+        android:layout_marginStart="66dp"
+        android:layout_marginEnd="66dp"
         android:ems="10"
-        android:hint="Nowe hasło"
+        android:hint="@string/hintNewPass"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_OLD_PASSWORD" />
 
     <EditText
         android:id="@+id/ID_NEW_PASSWORD_AGAIN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        style="@style/editTextField"
+        android:layout_marginStart="66dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
-        android:hint="Powtórz hasło"
+        android:hint="@string/hintConfPass"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ID_VERIFY_PASSWORD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_NEW_PASSWORD" />
 
     <EditText
         android:id="@+id/ID_OLD_PASSWORD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/editTextField"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="66dp"
         android:ems="10"
-        android:hint="Stare hasło"
+        android:hint="@string/hintOldPass"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/ID_NOTE_2"
-        android:layout_width="300dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="50dp"
+        style="@style/textFieldGreen"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="85dp"
+        android:text="Podaj stare hasło w celu weryfikacji"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ID_VERIFY_PASSWORD" />
+
+    <Button
+        android:id="@+id/ID_VERIFY_PASSWORD"
+        style="@style/buttonGreen"
+        android:layout_marginStart="116dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="50dp"
-        android:text="Podaj stare haslo w celu weryfikacji"
+        android:layout_marginEnd="116dp"
+        android:text="DALEJ"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ID_NEW_PASSWORD_AGAIN" />
+
+    <TextView
+        style="@style/headerBackgroundGreen"
+        android:id="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/ID_VERIFY_PASSWORD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="100dp"
-        android:text="DALEJ"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_OLD_PASSWORD" />
 </androidx.constraintlayout.widget.ConstraintLayout>
