--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
@@ -10,6 +10,7 @@
         android:id="@+id/buttonSalary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="@string/edit_rate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
