--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
@@ -1,130 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/buttonSalary"
+    <Spinner
+        android:id="@+id/spinnerScheduleMonth"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:entries="@array/months"
+        android:spinnerMode="dropdown"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinnerScheduleWeek"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/edit_rate"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:entries="@array/months"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/spinnerScheduleMonth"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button2" />
 
-    <TextView
-        android:id="@+id/textSalary"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="32dp"
-        android:autofillHints=""
-        android:background="#F1EEEE"
-        android:clickable="false"
-        android:ems="10"
-        android:fadingEdge="horizontal|vertical|none"
-        android:gravity="center|fill_vertical"
-        android:hint="@string/salary"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/textSalaryRate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:visibility="visible" />
-
-    <EditText
-        android:id="@+id/textSalaryRate"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="32dp"
-        android:autofillHints=""
-        android:background="#F1EEEE"
-        android:clickable="false"
-        android:ems="10"
-        android:fadingEdge="horizontal|vertical|none"
-        android:gravity="center|fill_vertical"
-        android:hint="@string/rate"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSalary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.369"
-        tools:visibility="visible"
-        android:inputType="none" />
-
-    <TextView
-        android:id="@+id/textSalaryText"
-        android:layout_width="120dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="32dp"
-        android:gravity="center_vertical"
-        android:text="@string/salary"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/textSalaryRateText"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textSalaryRateText"
-        android:layout_width="120dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="32dp"
-        android:gravity="center_vertical"
-        android:text="@string/rate"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSalary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
-
-    <TextView
-        android:id="@+id/textSakaryHoursText"
-        android:layout_width="120dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:gravity="center_vertical"
-        android:text="@string/hours_count"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSalaryRateText" />
-
-    <TextView
-        android:id="@+id/textSalaryHours"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="32dp"
-        android:autofillHints=""
-        android:background="#F1EEEE"
-        android:clickable="false"
-        android:ems="10"
-        android:fadingEdge="horizontal|vertical|none"
-        android:gravity="center|fill_vertical"
-        android:hint="@string/hours_count"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textSakaryHoursText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSalaryRate" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/how_to_salary"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSalary"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSalaryHours" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerScheduleWeek">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+        </LinearLayout>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
