--- a/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
@@ -46,4 +46,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ID_MAIN_AVATAR_VIEW"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogoutStore"
+        app:srcCompat="@android:drawable/btn_dialog" />
+
+    <Button
+        android:id="@+id/ID_GO_TO_AVATAR"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="ZMIANA ZDJECIA"
+        app:layout_constraintBottom_toTopOf="@+id/ID_VIEW_STOREHOUSE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
