--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails1.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails1.xml
@@ -284,23 +284,24 @@
         app:layout_constraintTop_toBottomOf="@+id/textDetailAddressText" />
 
 
-
     <Spinner
         android:id="@+id/spinnerDetailPosition"
-        android:layout_width="wrap_content"
+        android:layout_width="210dp"
         android:layout_height="32dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="24dp"
+        android:autofillHints=""
         android:background="#F1EEEE"
         android:ems="10"
+        android:entries="@array/array_name"
         android:gravity="center|fill_vertical"
         android:hint="@string/stanowisko"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailEmail"
-        tools:visibility="gone"
-        android:entries="@array/array_name" />
+        tools:visibility="gone" />
 
     
 
