--- a/ParcelDelivery/app/src/main/res/layout/row_schedule.xml
+++ b/ParcelDelivery/app/src/main/res/layout/row_schedule.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
 
     <TextView
         android:id="@+id/textScheduleDay"
         style="@style/textUserText"
         android:layout_width="80dp"
-        android:layout_weight="1"
         android:layout_marginStart="10dp"
+        android:layout_weight="1"
         android:text="@string/day_name" />
 
     <EditText
