Added Button( NOT PROGRAMMED ) for myAccount for all type of users. User can watch his stats ( if the button is programmed ) - in Manager it is alredy happening

--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -77,7 +77,19 @@
         android:id="@+id/ID_GO_TO_AVATAR"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/buttonGreen"
         android:text="ZMIANA ZDJĘCIA"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCourierAccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonCourierAccount"
+        style="@style/buttonGreen"
+        android:layout_width="312dp"
+        android:layout_height="wrap_content"
+        android:text="@string/my_account"
         app:layout_constraintBottom_toTopOf="@+id/buttonParcelList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
