--- a/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
@@ -63,8 +63,23 @@
         android:id="@+id/ID_GO_TO_AVATAR"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="ZMIANA ZDJECIA"
+        app:layout_constraintBottom_toTopOf="@+id/buttonStoreKeeperAccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonStoreKeeperAccount"
+        style="@style/buttonGreen"
+        android:layout_width="312dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/my_account"
         app:layout_constraintBottom_toTopOf="@+id/ID_VIEW_STOREHOUSE"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
