--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
@@ -6,29 +6,26 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSchedule"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Button"
+        android:text="@string/edit_schedule"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonAvailability"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/check_availability"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSchedule"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible" />
 
@@ -39,6 +36,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center_vertical"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAvailability"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +107,7 @@
             android:layout_height="30dp"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="2020-06-02 - 2020-06-03"
+            android:text="@string/week"
             android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         <androidx.appcompat.widget.AppCompatImageButton
