--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView9"
         style="@style/headerWhite"
         android:layout_marginStart="95dp"
         android:layout_marginTop="186dp"
@@ -75,17 +76,17 @@
 
     <Button
         android:id="@+id/ID_GO_TO_AVATAR"
+        style="@style/buttonGreen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/buttonGreen"
         android:text="ZMIANA ZDJĘCIA"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCourierAccount"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCoordinatorAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/buttonCourierAccount"
+        android:id="@+id/buttonCoordinatorAccount"
         style="@style/buttonGreen"
         android:layout_width="312dp"
         android:layout_height="wrap_content"
