--- a/ParcelDelivery/app/src/main/res/layout/activity_schedule.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_schedule.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonSchedule"
+        android:id="@+id/buttonAvailability"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
