Adres dodawany do paczki przy dodaniu paczki do bazy przez koordynatora

--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textViewRecipientAddress"
         style="@style/headerWhite"
         android:layout_marginStart="95dp"
         android:layout_marginTop="186dp"
