--- a/ParcelDelivery/app/src/main/res/layout/activity_pack.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_pack.xml
@@ -25,7 +25,6 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="120dp"
         android:layout_marginEnd="50dp"
-        android:text="id paczki"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,19 +36,17 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
-        android:text="adres odbiorcy?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_PACKID_VIEW" />
 
     <TextView
-        android:id="@+id/ID_COURIER_INFO_VIEW"
+        android:id="@+id/textViewSenderAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
-        android:text="status?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_STATUS_VIEW" />
@@ -65,14 +62,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textViewRecipientAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="jakies inne info ogolnie "
         app:layout_constraintBottom_toTopOf="@+id/spinnerStatusSelect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_COURIER_INFO_VIEW" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
+        app:layout_constraintVertical_bias="0.131" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
