--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -79,10 +79,11 @@
         style="@style/buttonGreen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="ZMIANA ZDJĘCIA"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCoordinatorAccount"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPresence"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -92,6 +93,16 @@
         android:layout_height="wrap_content"
         android:text="@string/my_account"
         app:layout_constraintBottom_toTopOf="@+id/buttonParcelList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonPresence"
+        style="@style/buttonGreen"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/present"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCoordinatorAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
