--- a/ParcelDelivery/app/src/main/res/layout/activity_avatar.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_avatar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,9 +10,8 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/ID_GALLERY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +20,13 @@
 
     <Button
         android:id="@+id/ID_CAMERA"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
+        style="@style/buttonGreen"
         android:text="ZRÓB ZDJĘCIE"
-        app:layout_constraintBottom_toTopOf="@+id/ID_SAVE_AVATAR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,28 +34,27 @@
 
     <Button
         android:id="@+id/ID_CLEAR_AVATAR"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
+        style="@style/buttonGreen"
         android:text="USUŃ ZDJĘCIE "
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_SAVE_AVATAR"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_SAVE_AVATAR" />
 
     <Button
         android:id="@+id/ID_SAVE_AVATAR"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
+        style="@style/buttonGreen"
         android:text="ZAPISZ"
-        app:layout_constraintBottom_toTopOf="@+id/ID_CLEAR_AVATAR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,15 +62,15 @@
 
     <Button
         android:id="@+id/ID_GALLERY"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="100dp"
+        style="@style/buttonGreen"
         android:text="WYBIERZ Z GALERII"
-        app:layout_constraintBottom_toTopOf="@+id/ID_CAMERA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_AVATAR_PICTURE" />
 </androidx.constraintlayout.widget.ConstraintLayout>
