--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/buttonParcelList"
         style="@style/buttonGreen"
-        android:layout_width="312dp"
+        android:layout_width="179dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="80dp"
@@ -77,8 +77,9 @@
     <Button
         android:id="@+id/buttonCoordinatorAccount"
         style="@style/buttonGreen"
-        android:layout_width="312dp"
+        android:layout_width="179dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="@string/my_account"
         app:layout_constraintBottom_toTopOf="@+id/buttonParcelList"
         app:layout_constraintEnd_toEndOf="parent"
