Password button transferred

--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails0.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails0.xml
@@ -87,13 +87,23 @@
 
     <Button
         android:id="@+id/ID_GO_TO_AVATAR"
-        android:layout_width="0dp"
+        style="@style/buttonGreen"
+        android:layout_width="179dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:text="ZMIANA ZDJĘCIA"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_UD0_AVATAR_VIEW" />
+
+    <Button
+        android:id="@+id/ID_CHANGE_PASSWORD"
+        style="@style/buttonGreen"
+        android:layout_marginTop="8dp"
+        android:text="ZMIANA HASŁA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ID_GO_TO_AVATAR" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
