Parcel list design

--- a/ParcelDelivery/app/src/main/res/layout/activity_parcel_add.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_parcel_add.xml
@@ -22,6 +22,7 @@
 
     <Button
         android:id="@+id/buttonConfirmParcel"
+        style="@style/buttonGreen"
         android:layout_width="186dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="115dp"
