--- a/ParcelDelivery/app/src/main/res/layout/parcel_list_item.xml
+++ b/ParcelDelivery/app/src/main/res/layout/parcel_list_item.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="parcel id"
+        android:text="#"
         android:textSize="27sp"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,8 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="parcel status"
+        android:text="Status: "
         android:textSize="18sp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/parcel_id" />
 
@@ -32,9 +34,10 @@
         android:id="@+id/parcel_courier_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="12dp"
-        android:text="courier id"
+        android:layout_marginStart="16dp"
+        android:text="Kurier: "
+        android:textSize="18sp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/parcel_status" />
 </androidx.constraintlayout.widget.ConstraintLayout>
