--- a/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
@@ -6,27 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".ui.parcel.ParcelListActivity">
 
-    <Button
-        android:id="@+id/buttonAddParcel"
-        android:layout_width="362dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginRight="136dp"
-        android:text="Dodaj Zamówienie"
-        android:textSize="14sp"
+    <TextView
+        android:id="@+id/textView7"
+        style="@style/headerBackgroundGreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/buttonAddParcel"
+        style="@style/buttonGreen"
+        android:layout_marginTop="10dp"
+        android:text="Dodaj Zamówienie"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/parcel_list_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="673dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="401dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
